# -*- mode: CMAKE; -*-

# install headers
install(FILES velocypack/velocypack-aliases.h DESTINATION include)
install(FILES velocypack/velocypack-common.h DESTINATION include)
install(FILES velocypack/Buffer.h DESTINATION include)
install(FILES velocypack/Builder.h DESTINATION include)
install(FILES velocypack/Collection.h DESTINATION include)
install(FILES velocypack/Dump.h DESTINATION include)
install(FILES velocypack/Dumper.h DESTINATION include)
install(FILES velocypack/Exception.h DESTINATION include)
install(FILES velocypack/Iterator.h DESTINATION include)
install(FILES velocypack/Options.h DESTINATION include)
install(FILES velocypack/Parser.h DESTINATION include)
install(FILES velocypack/Slice.h DESTINATION include)
install(FILES velocypack/Value.h DESTINATION include)
install(FILES velocypack/ValueType.h DESTINATION include)

