# -*- mode: CMAKE; -*-

# install headers
install(FILES velocypack/vpack.h DESTINATION include/velocypack)
install(FILES velocypack/velocypack-aliases.h DESTINATION include/velocypack)
install(FILES velocypack/velocypack-common.h DESTINATION include/velocypack)
install(FILES velocypack/Buffer.h DESTINATION include/velocypack)
install(FILES velocypack/Builder.h DESTINATION include/velocypack)
install(FILES velocypack/Collection.h DESTINATION include/velocypack)
install(FILES velocypack/Dump.h DESTINATION include/velocypack)
install(FILES velocypack/Dumper.h DESTINATION include/velocypack)
install(FILES velocypack/Exception.h DESTINATION include/velocypack)
install(FILES velocypack/Iterator.h DESTINATION include/velocypack)
install(FILES velocypack/Options.h DESTINATION include/velocypack)
install(FILES velocypack/Parser.h DESTINATION include/velocypack)
install(FILES velocypack/Slice.h DESTINATION include/velocypack)
install(FILES velocypack/Value.h DESTINATION include/velocypack)
install(FILES velocypack/ValueType.h DESTINATION include/velocypack)

