# -*- mode: CMAKE; -*-

# install headers
install(FILES velocypack/vpack.h DESTINATION include/velocypack)
install(FILES velocypack/velocypack-aliases.h DESTINATION include/velocypack)
install(FILES velocypack/velocypack-common.h DESTINATION include/velocypack)
install(FILES velocypack/AttributeTranslator.h DESTINATION include/velocypack)
install(FILES velocypack/Basics.h DESTINATION include/velocypack)
install(FILES velocypack/Buffer.h DESTINATION include/velocypack)
install(FILES velocypack/Builder.h DESTINATION include/velocypack)
install(FILES velocypack/Collection.h DESTINATION include/velocypack)
install(FILES velocypack/Dumper.h DESTINATION include/velocypack)
install(FILES velocypack/Exception.h DESTINATION include/velocypack)
install(FILES velocypack/Helpers.h DESTINATION include/velocypack)
install(FILES velocypack/HexDump.h DESTINATION include/velocypack)
install(FILES velocypack/Iterator.h DESTINATION include/velocypack)
install(FILES velocypack/Options.h DESTINATION include/velocypack)
install(FILES velocypack/Parser.h DESTINATION include/velocypack)
install(FILES velocypack/Sink.h DESTINATION include/velocypack)
install(FILES velocypack/Slice.h DESTINATION include/velocypack)
install(FILES velocypack/Value.h DESTINATION include/velocypack)
install(FILES velocypack/ValueType.h DESTINATION include/velocypack)
install(FILES velocypack/Version.h DESTINATION include/velocypack)

